fix cards wrap and other

--- a/components/list/cards/styles.module.scss
+++ b/components/list/cards/styles.module.scss
@@ -2,10 +2,13 @@
   position: relative;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   list-style: none;
   min-height: 500px;
   padding: 25px;
   margin: 0 0 100px 0;
   background: #141414;
+
+  li:nth-of-type(3n) {
+    margin: 0 0 45px 0;
+  }
 }
